<resources>
    <string name="app_name">LoveCoffee.ie</string>
    <string name="google_maps_key">AIzaSyATkaNLzLoIkXs0OVWeo7y7n2cgNwELHdw</string>
    <string name="register">Let\'s go!</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Dive In</string>
    <string name="town_city">Town / City</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="user_details">User Details</string>
    <string name="register_here">I\'m new here. Hook me up!</string>
    <string name="add_new_coffee_shop">Add New Coffee Shop</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="plus_sign">+</string>
    <string name="wifi_SSID_check">Please switch on your wifi</string>
    <string name="new_shop_title">New Coffee Shop</string>
    <string name="location_off">Please switch on your location services</string>
    <string name="new_shop_instructions">Please make sure that this is the correct wifi name for the Coffee Shop that you are currently in. Check with a staff member if unsure.</string>
    <string name="shop_name">shop name</string>
    <string name="shop_address">Shop Address</string>
    <string name="find_this_shop">Find Shop</string>
    <string name="confirm_button">Add to My Shops</string>
    <string name="gps_network_not_enabled">GPS  network not enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>


    <string name="action_view_shop_and_visit_details">View shop and visit details</string>

    <string name="action_add_visit">Add visit</string>

    <string name="backdrop_title">LOVE COFFEE</string>
    <string name="backdrop_subtitle">My Loyalty Points</string>
    <string name="wifi_not_connected">Wifi not connected</string>
    <string name="open_wifi_settings">Open wifi settings</string>
    <string name="title_activity_shop_map">Map</string>


    <string name="funny_neg_visit_1">Not today my friend. Looks like you\'ve already scored here today</string>
    <string name="funny_neg_visit_2">Ehhm, I\'ve just checked and we\'re already on the scoreboard for today</string>
    <string name="funny_neg_visit_3">Woah, groundhog day! We\'ve already scored today!</string>
    <string name="funny_neg_visit_4">Sorry, only one point per day</string>
    <string name="funny_neg_visit_5">Love Coffee only rewards you once a day</string>
    <string name="funny_neg_1">You\'ve got to catch them all!</string>
    <string name="funny_neg_2">Hold up! Not enough points!</string>
    <string name="funny_neg_3">Now, now, you didn\'t think you\'d get a freebie did you?</string>
    <string name="funny_neg_4">So close and yet so far!</string>
    <string name="funny_neg_5">Points mean prizes!</string>


    <string name="barista_instructions">You have collected 9 out of 9 Love Coffee Loyalty points.\nPlease show this to a staff member before claiming your free coffee.</string>
    <string name="barist_must_click">Click the Barista Button to reset points</string>
    <string name="barista_button">Barista Reset Button \n Coffee Claimed at Counter</string>
    <string name="click_above">Click on the cups below to view the dates of points collected</string>
    <string name="barista_button_warning">***Redeem Coffee!*** \n\nPlease select \'Ok\' if you wish to proceed with redeeming the free coffee OR \'Cancel\' if you hit this button in error.</string>
    <string name="congrats_free_coffee">Congratulations! \nYou have earned a free coffee by being a loyal customer of:</string>

    <string name="no_visits">No visits to show in your list</string>
    <string name="tv_list_title">List of all current points for:</string>
    <string name="tv_date_column">Date of Loyalty Points Collected</string>

</resources>

