<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="practice.Caffeine.NewCoffeeShopActivity">


    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="20dp"
        android:text="@string/new_shop_title"
        android:textSize="@dimen/large_text" />


    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvRegisterTitle"
        android:text="@string/new_shop_instructions" />

    <TextView
        android:id="@+id/tvWifiSSID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvInstructions"
        android:hint="@string/wifi_SSID_check" />

    <Button
        android:id="@+id/bPickPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvWifiSSID"
        android:text="@string/find_this_shop" />

    <TextView
        android:id="@+id/tvShopAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bPickPlace"
        android:text="@string/shop_address"
        android:textAlignment="viewStart"
        android:textSize="@dimen/med_text" />

    <TextView
        android:id="@+id/tvShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvShopAddressTitle"
        android:ems="10"
        android:hint="@string/location_off"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/tvShopAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvShopName"
        android:ems="10"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btnAddShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvShopAddress"
        android:layout_marginTop="35dp"
        android:text="@string/confirm_button"
        />


</RelativeLayout>
